--- a/exercises/alley-posters/css/style.css
+++ b/exercises/alley-posters/css/style.css
@@ -8,52 +8,45 @@
 */
 .poster-1 {
     margin: 100px 12px 0px;
-    box-shadow: -3px 2px 2px rgb(85, 27, 27);
+    box-shadow: -4px 2px 2px rgb(85, 27, 27);
     transform: rotate(5deg);
 }
 
 .poster-1 div {
-    background-color: beige;
+    background-color: rgb(20, 17, 17);
     border: 10px;
-    box-shadow: inset 0px 0px 4px rgb(85, 27, 27);
-    padding: 1px;
-}
-
-.poster-1 img {
-    width: 80px;
-}
-
-.poster-2 {
-    border: 2px solid black;
-    margin: 70px 12px 0px;
-    box-shadow: -3px 2px 2px rgb(85, 27, 27);
-    transform: rotate(-1deg);
-}
-
-.poster-2 div {
-    background-color: beige;
-    border: 0px;
     box-shadow: inset 0px 0px 4px rgb(85, 27, 27);
     padding: 5px;
 }
-
+.poster-1 img {
+    width: 80px;
+}
+.poster-2 {
+    border: 2px solid black;
+    margin: 70px 12px 0px;
+    box-shadow: -4px 2px 2px rgb(85, 27, 27);
+    transform: rotate(-1deg);
+}
+.poster-2 div {
+    background-color: beige;
+    border: 0px;
+    box-shadow: inset 0px 0px 5px rgb(68, 66, 66);
+    padding: 5px;
+}
 .poster-2 img {
     width: 80px;
 }
-
 .poster-3 {
     margin: 130px 1px 1px;
-    box-shadow: -3px 2px 2px rgb(85, 27, 27);
+    box-shadow: -4px 2px 2px rgb(85, 27, 27);
     transform: rotate(-6deg);
 }
-
 .poster-3 div {
-    background-color: beige;
+    background-color: rgb(20, 17, 17);
     border: 10px;
     box-shadow: inset 0px 0px 4px rgb(85, 27, 27);
-    padding: 1px;
+    padding: 5px;
 }
-
 .poster-3 img {
     width: 80px;
 }
