--- a/demos/absolute-vs-relative-units-demo/css/name.css
+++ b/demos/absolute-vs-relative-units-demo/css/name.css
@@ -15,7 +15,19 @@
 .absolute-image {
     width:350px;
 }
-
 .relative-image {
     width: 100%
+}
+
+.outer-container {
+    border: 3px solid blue;
+    width: 66%;
+}
+.inner-container {
+    border: 3px solid lightblue;
+    width: 50%;
+}
+.inner-container p, .inner-container img {
+    display: inline-block;
+    width: 48%;
 }
