--- a/css/about.css
+++ b/css/about.css
@@ -1,13 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Poppins:wght@100;200&display=swap');
 
-.opening-paragraph {
+.paragraph-1, img {
     display: inline-block;
-}
-
-p {
-    font-family: 'Poppins', sans-serif;
-}
-
-img {
-    width: 200px;
+    width: 30%;
 }
