--- a/license/css/style.css
+++ b/license/css/style.css
@@ -13,8 +13,8 @@
 #license {
     border: 4px solid brown;
     border-radius: 5%;
-    background-color: rgb(255, 211, 149);
     padding: 10px;
+    background: linear-gradient(to right, rgb(249, 223, 178), rgb(251, 172, 35));
 }
 h1 {
     color: darkblue;
@@ -31,7 +31,7 @@ h4 {
 }
 #id-and-expiration {
     display: inline-block;
-    color: darkblue
+    color: darkblue;
 }
 #id-and-expiration div {
     display: inline-block;
@@ -59,8 +59,20 @@ h4 {
 #data-left {
     display: inline-block;
 }
+#data-left span {
+    color: red
+}
+#data-left div {
+    color: darkblue;
+}
 #data-right {
     display: inline-block;
+}
+#data-right span {
+    color: red
+}
+#data-right div {
+    color: darkblue
 }
 #signature {
     text-align: center;
@@ -77,7 +89,8 @@ h4 {
 }
 #donor {
     display: inline-block;
-    color: red
+    color: red;
+    padding-top: 11.4px;
 }
 #real-id {
     display: inline-block;
