--- a/demos/two-column-layouts-flex-demo/css/name.css
+++ b/demos/two-column-layouts-flex-demo/css/name.css
@@ -10,12 +10,28 @@ body {
     display: flex;
 }
 #sidebar {
-    background-color: lavender;
-    width: 200px;
-    order: 2;
+    background-color: rgb(98, 98, 113);
+    width: 250px;
+    order: 1;
+    padding: 24px;
+    border-right: 5px solid orangered;
+}
+#sidebar h2 {
+    color: orange;
+}
+#sidebar ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+#sidebar ul li a {
+    color: white;
+    text-decoration: none;
 }
 .main-content {
     background-color: azure;
     flex: 1;
-    order: 1;
+    order: 2;
 }
