--- a/demos/two-column-layouts-flex-demo/css/name.css
+++ b/demos/two-column-layouts-flex-demo/css/name.css
@@ -3,21 +3,23 @@
     margin: 0;
 }
 body {
-    font-family: sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 #two-columns {
     display: flex;
+    column-gap: 10px;
 }
 #sidebar {
     background-color: rgb(98, 98, 113);
     width: 250px;
     order: 1;
     padding: 24px;
-    border-right: 5px solid orangered;
+    border-right: 5px solid black;
 }
 #sidebar h2 {
-    color: orange;
+    color: black;
+    margin-bottom: 20px;
 }
 #sidebar ul {
     list-style-type: none;
@@ -26,12 +28,15 @@ body {
     flex-direction: column;
     gap: 20px;
 }
+
 #sidebar ul li a {
     color: white;
     text-decoration: none;
 }
 .main-content {
-    background-color: azure;
+    background-color: rgb(134, 247, 247);
     flex: 1;
     order: 2;
+    padding: 40px;
+    border-left: 5px solid black
 }
