--- a/exercises/wiki-with-sidebar/css/name.css
+++ b/exercises/wiki-with-sidebar/css/name.css
@@ -102,6 +102,7 @@ body {
     padding-top: 10px;
 }
 
-#description img {
-    max-width: 150px;
+img {
+    max-width: 300px;
+    padding: 20px;
 }
