--- a/exercises/blog-with-sidebar/css/name.css
+++ b/exercises/blog-with-sidebar/css/name.css
@@ -17,7 +17,8 @@ img {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    padding-top: 20px
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 /* sidebar stuff */
 #sidebar {
@@ -50,15 +51,15 @@ img {
 }
 
 /* main content */
-#main-content {
+#main-content1 {
     background-color: #f8effe;
     padding: 14px;
     grid-area: content;
 }
-#main-content h1 {
+#main-content1 h1 {
     text-align: center;
     padding-bottom: 15px
 }
-#main-content p {
+#main-content1 p {
     padding: 10px
 }
