--- a/exercises/metube/css/name.css
+++ b/exercises/metube/css/name.css
@@ -7,16 +7,23 @@ body {
 }
 #grid-layout {
     display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-areas:
+        "header header"
+        "sidebar main";
 }
 
 #header {
     background-color: lightskyblue;
+    grid-area: header;
 }
 
 #sidebar {
     background-color: lightcyan;
+    grid-area: sidebar;
 }
 
 #main {
     background-color: lightgoldenrodyellow;
+    grid-area: main;
 }
