--- a/exercises/metube/css/name.css
+++ b/exercises/metube/css/name.css
@@ -31,8 +31,20 @@ body {
 }
 
 #sidebar {
-    background-color: lightcyan;
     grid-area: sidebar;
+    padding: 0px 24px;
+}
+#sidebar ul {
+    padding: 12px 0px;
+    margin: 0px;
+    list-style-type: none;
+    border-bottom: 1px solid #AAAAAA;
+}
+#sidebar ul a {
+    text-decoration: none;
+    color: #111111;
+    padding: 12px;
+    display: block;
 }
 
 #main {
