--- a/demos/cards-buttons-gradients-demo/css/name.css
+++ b/demos/cards-buttons-gradients-demo/css/name.css
@@ -12,15 +12,18 @@ body {
     margin: 48px auto;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 
 }
 
 .card {
+    margin: 24px;
     width: 350px;
     border: 2px solid #dec6bd;
     border-radius: 5px;
     padding: 10px;
     box-shadow: -4px 4px 12px #b7b7b7;
+    background: linear-gradient(-50deg, #fac6c6, #fff7f7, #f5b0b0);
 }
 .card img {
     width: 100%;
