--- a/demos/cards-buttons-gradients-demo/css/name.css
+++ b/demos/cards-buttons-gradients-demo/css/name.css
@@ -19,7 +19,7 @@ body {
 .card {
     margin: 24px;
     width: 350px;
-    border: 2px solid #dec6bd;
+    border: 2px solid #ecd0c7;
     border-radius: 5px;
     padding: 10px;
     box-shadow: -4px 4px 12px #b7b7b7;
