trek-cards color adjustment

--- a/exercises/trek-cards/css/style.css
+++ b/exercises/trek-cards/css/style.css
@@ -28,8 +28,8 @@ p {
 a {
     font-family: 'Open Sans', sans-serif;
     display: block;
-    background-color: green;
-    color: rgb(235, 253, 235);
+    background-color: rgb(6, 126, 6);
+    color: rgb(241, 253, 235);
     text-decoration: none;
     font-size: 20px;
     text-align: center;
