--- a/demos/side-by-side-layouts-demo/css/name.css
+++ b/demos/side-by-side-layouts-demo/css/name.css
@@ -5,4 +5,74 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+img {
+    width: 100%;
+}
 
+.single-column {
+    min-width: 600px;
+    max-width: 1200px;
+    margin: 0px auto;
+}
+#main {
+    background: radial-gradient(at top left, #a8f3f2, #16B6B3);
+    padding: 48px;;
+}
+
+/* side by side implementation */
+.side-by-side {
+    display: flex;
+    align-items: center;
+    margin: 48px 0px;
+}
+.side-by-side .image-container {
+    flex: 1;
+}
+.side-by-side .text-container {
+    flex: 1;
+    padding: 36px;
+}
+
+.side-by-side .text-container h3 {
+    font-size: 48px;
+}
+.side-by-side .text-container .a-btn {
+    font-size: 28px;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #1f221c;
+    color: #FFFFFF;
+    padding: 24px 48px;
+    border-radius: 48px;
+    transition: color .5s;
+}
+.side-by-side .text-container .a-btn:hover{
+    color: #16B6B3;
+}
+
+
+#card-selection {
+    background-color: #ff4000;
+    padding: 48px;
+    color: white;
+}
+.card-container {
+    display: flex;
+    justify-content: space-between;
+}
+.card {
+    flex: 1;
+    border: 3px solid white;
+    padding: 35px;
+    text-align: center;
+    margin: 36px;
+}
+.card h3 {
+    font-size: 36px;
+    margin: 0px;
+}
+.card p {
+    font-size: 24px;
+    margin: 24px 0px 0px;
+}
