--- a/exercises/product-comparison-page/css/name.css
+++ b/exercises/product-comparison-page/css/name.css
@@ -7,23 +7,31 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/* cards */
+h1 {
+    font-size: 55px;
+    text-align: center;
+    color: #dedfdf;
+    background-color: #2c2a30;
+    margin: 0px;
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
 .single-column {
     min-width: 600px;
     max-width: 1200px;
     margin: 0px auto;
 }
-
+.card-container {
+    display: flex;
+    justify-content: space-between;
+}
 #cards {
     background-color: #2c2a30;
     color: #dedfdf;
     padding: 48px;
 }
-
-.card-container {
-    display: flex;
-    justify-content: space-between;
-}
-
 .card {
     flex: 1;
     border: 3px solid #bfefff;
@@ -31,13 +39,81 @@ body {
     text-align: center;
     margin: 36px;
 }
-
 .card h3 {
     font-size: 36px;
     margin: 0px;
 }
-
 .card p {
     font-size: 24px;
     margin: 24px 0px 0px;
+}
+
+/* media and text */
+#media-text {
+    background-color: #2c2a30;
+    padding: 48px;
+}
+.side-by-side {
+    display: flex;
+    align-items: center;
+    margin: 48px 0px;
+}
+img {
+    border-radius: 50px;
+    box-shadow: 15px 15px 10px black;
+}
+
+.side-by-side .image-container {
+    flex: 1;
+}
+.side-by-side .text-container {
+    flex: 1;
+    padding: 66px;
+}
+.side-by-side .image-container img {
+    width: 100%;
+}
+.side-by-side .text-container h3 {
+    font-size: 48px;
+}
+
+.side-by-side .text-container a {
+    font-size: 28px;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+    align-items: center;
+    background-color: #dedfdf;
+    color: #2c2a30;
+    border: 3px solid transparent;
+    padding: 24px 48px;
+    border-radius: 48px;
+}
+.side-by-side .text-container a:hover {
+    color: #dedfdf;
+    background-color: #2c2a30;
+    border: 3px solid #dedfdf;
+}
+
+/* comparison tables */
+.comp-table h3 {
+    text-align: center;
+    font-size: 54px;
+}
+.comp-layout {
+    background-color: #2c2a30;
+    padding: 36px;
+}
+.comp-row {
+    display: flex;
+    border-bottom: 3px solid #bfefff;
+    color: #dedfdf;
+}
+.comp-row.comp-header {
+    font-weight: bold;
+}
+.comp-row div {
+    flex: 1;
+    padding: 24px;
+    font-size: 24px;
 }
