--- a/demos/galleries-demo/css/name.css
+++ b/demos/galleries-demo/css/name.css
@@ -14,5 +14,24 @@ body {
 
 .basic-grid-gallery {
     display: grid;
-    grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(3, 1fr);
+    padding: 24px;
+    gap: 24px;
+    border: 10px solid #333;
+}
+.basic-grid-gallery img {
+    width: 100%;
+}
+
+.cropped-grid-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 200px;
+    padding: 24px;
+    border: 10px solid #333;
+}
+.cropped-grid-gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
