--- a/exercises/themed-gallery-page/css/name.css
+++ b/exercises/themed-gallery-page/css/name.css
@@ -8,7 +8,7 @@ body {
 }
 
 #background-image {
-    background-color: rgb(229, 157, 157);
+    background-color: rgb(88, 68, 68);
     margin: 0px;
     width: 100%;
     height: 100%;
@@ -28,6 +28,7 @@ body {
     font-size: 50px;
     padding: 24px;
     padding-bottom: 50px;
+    color: white;
 }
 
 .images {
