--- a/exercises/themed-gallery-page/css/name.css
+++ b/exercises/themed-gallery-page/css/name.css
@@ -15,14 +15,17 @@ body {
 }
 #layout {
     max-width: 500px;
-    margin: 48px auto;
+    margin: auto auto;
     text-align: center;
 }
 
+.hero {
+    padding-bottom: 50px;
+}
 .hero img {
     width: 50%;
     border-radius: 20px;
-    border: 3px solid black;
+    border: 3px solid white;
 }
 .hero h2 {
     font-size: 50px;
@@ -41,5 +44,5 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    border: 3px solid black;
+    border: 3px solid white;
 }
