--- a/exercises/themed-gallery-page/css/name.css
+++ b/exercises/themed-gallery-page/css/name.css
@@ -4,7 +4,7 @@
 }
 body {
     margin: 0px;
-    font-family: sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 #background-image {
