--- a/css/about.css
+++ b/css/about.css
@@ -4,3 +4,24 @@
     display: inline-block;
     width: 30%;
 }
+
+#layout {
+    max-width: 800px;
+    margin: 48px auto;
+    text-align: center;
+}
+#photo-showcase {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 200px;
+    padding: 24px;
+    border: 3px solid #453434;
+}
+#photo-showcase img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+img {
+    width: 20px;
+}
