--- a/exercises/themed-gallery-page/css/name.css
+++ b/exercises/themed-gallery-page/css/name.css
@@ -7,31 +7,36 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
-#background-image {
-    background-color: rgb(88, 68, 68);
+#background-color {
+    background-color: rgb(76, 12, 12);
     margin: 0px;
     width: 100%;
     height: 100%;
 }
+
 #layout {
     max-width: 500px;
     margin: auto auto;
     text-align: center;
 }
 
-.hero {
-    padding-bottom: 50px;
-}
-.hero img {
-    width: 50%;
-    border-radius: 20px;
-    border: 3px solid white;
-}
-.hero h2 {
+#h2 {
     font-size: 50px;
     padding: 24px;
     padding-bottom: 50px;
-    color: white;
+    color: rgb(123, 85, 85);
+    order: 1;
+    
+}
+
+.hero {
+    background-image: url(../images/img12.jpg);
+    background-size: cover;
+    background-position: center center;
+    height: 50vh;
+    display: flex;
+    order: 2;
+
 }
 
 .images {
