--- a/css/about.css
+++ b/css/about.css
@@ -1,22 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Poppins:wght@100;200&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+body {
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* about page */
 .paragraph-1, img {
     display: inline-block;
     width: 30%;
 }
 
-#photo-showcase {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 200px;
-    padding: 24px;
-    border: 3px solid #453434;
-}
-#photo-showcase img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-img {
-    width: 20px;
-}
