--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,4 +1,10 @@
 /* gallery */
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: sans-serif;
+}
 #layout {
     max-width: 800px;
     margin: 48px auto;
@@ -6,20 +12,22 @@
 }
 
 .mixed-layout {
-    columns: 3 auto;
-    gap: 24px;
+    columns: 3 10vw;
+    gap: 14px;
 }
 .mixed-layout img {
-    width: 100%;
+    width: 90%;
+    margin-bottom: 0px;
 }
 h3 {
-    font-size: 70px;
+    font-size: 60px;
 }
 p {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
 }
 
 .small-text {
-    font-size: 13px;
+    font-size: 8px;
+    padding-bottom: 5vh;
 }
