--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,30 +4,43 @@
 }
 body {
     font-family: sans-serif;
+    background-color: #C0C0C0;
+}
+
+#main-components {
+    text-align: center;
+    margin: 0;
+    padding-bottom: 30px;
 }
 #layout {
     max-width: 800px;
     margin: 48px auto;
     text-align: center;
 }
-
 .mixed-layout {
     columns: 3 10vw;
     gap: 14px;
+    border: 3px dashed black;
+    padding: 24px;
+    background-color: #EBEBEB;
 }
 .mixed-layout img {
     width: 90%;
     margin-bottom: 0px;
 }
 h3 {
-    font-size: 60px;
+    font-size: 40px;
+    border: 3px solid black;
+    background-color: #29335C;
+    color: #EBEBEB;
+    padding: 24px;
 }
 p {
     font-size: 15px;
     font-weight: bold;
 }
-
 .small-text {
-    font-size: 8px;
-    padding-bottom: 5vh;
+    font-size: 10px;
+    padding-bottom: 15px;
 }
+
