--- a/css/gallery.css
+++ b/css/gallery.css
@@ -11,6 +11,14 @@ body {
     text-align: center;
     margin: 0;
     padding-bottom: 30px;
+    border: 3px solid black;
+    background-color: #29335c;
+    color: #EBEBEB;
+}
+#main-components a{
+    text-decoration: none;
+    color: #C0C0C0;
+    padding: 10px;
 }
 #layout {
     max-width: 800px;
@@ -20,7 +28,7 @@ body {
 .mixed-layout {
     columns: 3 10vw;
     gap: 14px;
-    border: 3px dashed black;
+    border: 3px dashed #29335c;
     padding: 24px;
     background-color: #EBEBEB;
 }
@@ -30,8 +38,8 @@ body {
 }
 h3 {
     font-size: 40px;
-    border: 3px solid black;
-    background-color: #29335C;
+    border: 3px solid #29335c;
+    background-color: #3c896d;
     color: #EBEBEB;
     padding: 24px;
 }
