--- a/css/gallery.css
+++ b/css/gallery.css
@@ -42,6 +42,7 @@ h3 {
     background-color: #3c896d;
     color: #EBEBEB;
     padding: 24px;
+    border-radius: 30px;
 }
 p {
     font-size: 15px;
