--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,20 +4,20 @@
 }
 body {
     font-family: sans-serif;
-    background-color: #C0C0C0;
+    background-color: white;
 }
 
 #main-components {
     text-align: center;
-    margin: 0;
+    margin: 0px auto;
     padding-bottom: 30px;
-    border: 3px solid black;
-    background-color: #29335c;
-    color: #EBEBEB;
+    padding-top: 5px;
+    background-color: #E1F4CB;
+    color: black;
 }
 #main-components a{
     text-decoration: none;
-    color: #C0C0C0;
+    color: black;
     padding: 10px;
 }
 #layout {
@@ -28,7 +28,6 @@ body {
 .mixed-layout {
     columns: 3 10vw;
     gap: 14px;
-    border: 3px dashed #29335c;
     padding: 24px;
     background-color: #EBEBEB;
 }
@@ -37,11 +36,10 @@ body {
     margin-bottom: 0px;
 }
 h3 {
-    font-size: 40px;
-    border: 3px solid #29335c;
-    background-color: #3c896d;
-    color: #EBEBEB;
-    padding: 24px;
+    font-size: 30px;
+    background-color: #717568;
+    color: white;
+    padding: 10px;
     border-radius: 30px;
 }
 p {
@@ -53,7 +51,8 @@ p {
     padding-bottom: 15px;
 }
 .title {
-    background-color: #534D41;
-    color: #EBEBEB;
-    padding: 5px;
+    background-color: #BACBA9;
+    color: black;
+    padding: 3px;
+    border-radius: 10px;
 }
