--- a/css/about.css
+++ b/css/about.css
@@ -36,6 +36,11 @@ body {
     object-fit: cover;
     flex: 1;
 }
+#header {
+    max-width: 800px;
+    margin: 48px auto;
+    text-align: center;
+}
 #header h3 {
     font-size: 30px;
     text-align: center;
