--- a/css/contact.css
+++ b/css/contact.css
@@ -19,3 +19,22 @@ body {
     color: black;
     padding: 10px;
 }
+
+/* contact page */
+#main-layout {
+    margin: 0 auto;
+    text-align: center;
+    max-width: 800px;
+    margin: 48px auto;
+    text-align: center;
+}
+h3 {
+    font-size: 30px;
+    background-color: #717568;
+    color: white;
+    padding: 10px;
+    border-radius: 30px;
+}
+img {
+    border: dashed 5px #717568
+}
