--- a/css/contact.css
+++ b/css/contact.css
@@ -27,6 +27,7 @@ body {
     max-width: 800px;
     margin: 48px auto;
     text-align: center;
+    background-color: #EBEBEB;
 }
 h3 {
     font-size: 30px;
@@ -37,4 +38,37 @@ h3 {
 }
 img {
     border: dashed 5px #717568
+}
+#second-layout {
+    background-color: #EBEBEB;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 800px;
+    margin: 48px auto;
+    text-align: center;
+}
+#main-layout p {
+    background-color: #BACBA9;
+    color: black;
+    padding: 3px;
+    border-radius: 10px;
+    font-weight: bold;
+}
+#second-layout img {
+    width: 612px;
+    height: 344px;
+    object-fit: cover;
+}
+#second-layout {
+    display: flex;
+    column-gap: 14px;
+}
+#second-layout p {
+    text-align: center;
+    font-size: 15px;
+    background-color: #BACBA9;
+    color: black;
+    padding: 10px;
+    border-radius: 30px;
+    margin: auto;
 }
