--- a/css/about.css
+++ b/css/about.css
@@ -20,6 +20,13 @@ body {
     color: black;
     padding: 10px;
 }
+#main-components a:hover{
+    box-shadow: 5px 3px 3px #333;
+    background-color: #717568;
+    color: #EBEBEB;
+    border-radius: 20px;
+    padding: 10px;
+}
 
 /* about page */
 #main-layout {
