--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,6 @@ body {
     font-family: sans-serif;
     background-color: white;
 }
-
 #main-components {
     text-align: center;
     margin: 0px auto;
@@ -14,6 +13,11 @@ body {
     background-color: #E1F4CB;
     color: black;
 }
+#main-components a{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+}
 #main-components a:hover{
     box-shadow: 5px 3px 3px #333;
     background-color: #717568;
@@ -21,19 +25,41 @@ body {
     border-radius: 20px;
     padding: 10px;
 }
-#main-components a {
-    text-decoration: none;
-    color: black;
-    padding: 10px;
-}
 
-/* index/home page */
-p {
+/* gallery page */
+#layout {
+    max-width: 800px;
+    margin: 48px auto;
     text-align: center;
 }
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+.mixed-layout {
+    columns: 3 10vw;
+    gap: 14px;
+    padding: 24px;
+    background-color: #EBEBEB;
+}
+.mixed-layout img {
+    width: 90%;
+    margin-bottom: 0px;
+}
+h3 {
+    font-size: 30px;
+    background-color: #717568;
+    color: white;
+    padding: 10px;
+    border-radius: 30px;
+}
+p {
+    font-size: 15px;
+    font-weight: bold;
+}
+.small-text {
+    font-size: 10px;
+    padding-bottom: 15px;
+}
+.title {
+    background-color: #BACBA9;
+    color: black;
+    padding: 3px;
+    border-radius: 10px;
 }
