--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,3 +1,4 @@
+/* gallery */
 * {
     box-sizing: border-box;
 }
@@ -5,7 +6,6 @@ body {
     font-family: sans-serif;
     background-color: white;
 }
-
 #main-components {
     text-align: center;
     margin: 0px auto;
@@ -14,6 +14,11 @@ body {
     background-color: #E1F4CB;
     color: black;
 }
+#main-components a{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+}
 #main-components a:hover{
     box-shadow: 5px 3px 3px #333;
     background-color: #717568;
@@ -21,26 +26,22 @@ body {
     border-radius: 20px;
     padding: 10px;
 }
-#main-components a {
-    text-decoration: none;
-    color: black;
-    padding: 10px;
-}
 
-/* index/home page */
+/* gallery page */
 #layout {
+    max-width: 800px;
     margin: 48px auto;
     text-align: center;
 }
-#main-layout {
-    background-image: url(../images/person11.jpg);
-    height: 150vh;
-    background-size: cover;
-    background-position: top center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
+.mixed-layout {
+    columns: 3 10vw;
+    gap: 14px;
+    padding: 24px;
+    background-color: #EBEBEB;
+}
+.mixed-layout img {
+    width: 90%;
+    margin-bottom: 0px;
 }
 h3 {
     font-size: 30px;
@@ -48,4 +49,18 @@ h3 {
     color: white;
     padding: 10px;
     border-radius: 30px;
+}
+p {
+    font-size: 15px;
+    font-weight: bold;
+}
+.small-text {
+    font-size: 10px;
+    padding-bottom: 15px;
+}
+.title {
+    background-color: #BACBA9;
+    color: black;
+    padding: 3px;
+    border-radius: 10px;
 }
