--- a/exercises/client-navbars/css/index3.css
+++ b/exercises/client-navbars/css/index3.css
@@ -6,41 +6,54 @@ body {
     font-family: sans-serif;
 }
 
+#top-header {
+    top: 0px;
+    position: sticky;
+}
+#top-header p{
+    background-color: #2c012c;
+    margin: 0px auto;
+    padding: 15px;
+    text-align: center;
+    color: white;
+}
+
+
+
+
 #header {
     top: 0px;
     position: sticky;
 }
 .nav {
-    background: linear-gradient(to left, #ff8a31, #360b05);
+    background-color: #F75F1C;
+    box-shadow: inset 10px 10px 30px #64260b;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 50px;
 }
-.nav #logo {
-    margin-right: auto;
+#logo {
+    font-size: 25px;
     color: #ff8a31
 }
-.nav a {
+#link a {
     text-decoration: none;
     color: white;
-    padding: 10px;
-    font-size: 17px;
-    margin-right: 15px;
 }
-.nav p {
-    text-decoration: none;
-    color: #080C10;
-    padding: 10px;
-    font-size: 25px;
+#link a:hover {
+    color: black;
 }
 .button {
-    background-color: #360b05;
-    margin-right: 0px;
-    color: #ff8a31;
-    border-radius: 10px;
+    text-decoration: none;
+    color: white;
+    border: 3px solid transparent;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: #2c012c;
 }
 .button:hover {
     background-color: white;
+    color: #360b05;
 }
 
