--- a/exercises/client-navbars/css/index3.css
+++ b/exercises/client-navbars/css/index3.css
@@ -40,7 +40,8 @@ body {
     color: #fe5f1b;
 }
 #link a:hover {
-    color: black;
+    color: rgb(160, 159, 159);
+    text-shadow: 3px 3px 6px black;
 }
 .button {
     text-decoration: none;
@@ -51,8 +52,9 @@ body {
     background-color: #2c012c;
 }
 .button:hover {
-    background-color: white;
-    color: #360b05;
+    background-color: #913500;
+    color: white;
+    border: 3px solid white
 }
 
 
@@ -73,5 +75,9 @@ body {
     text-decoration: none;
     color: white;
     font-size: 15px;
+}
+#bottom-header a:hover {
+    color: rgb(160, 159, 159);
+    text-shadow: 3px 3px 6px black;
 }
 
