--- a/exercises/client-navbars/css/index2.css
+++ b/exercises/client-navbars/css/index2.css
@@ -26,6 +26,10 @@ body {
     padding: 10px;
     font-size: 17px;
 }
+.nav a:hover {
+    text-shadow: 3px 3px 10px black;
+    color: white;
+}
 .nav p {
     text-decoration: none;
     color: #080C10;
@@ -39,9 +43,9 @@ body {
     border: 3px solid #080C10;
 }
 .button:hover {
-    background-color: white;
     margin: 0px auto;
     border-radius: 15px;
     border: 3px solid #080C10;
     box-shadow: inset 3px 3px 5px #333;
+    color: #ad1a07;
 }
