--- a/css/gallery.css
+++ b/css/gallery.css
@@ -30,6 +30,7 @@ body {
 /* gallery page */
 #layout {
     max-width: 800px;
+    min-width: 200px;
     margin: 48px auto;
     text-align: center;
 }
