--- a/exercises/hover-galleries/css/name.css
+++ b/exercises/hover-galleries/css/name.css
@@ -2,34 +2,63 @@
     box-sizing: border-box;
 }
 body {
-    margin: 48px auto;
+    margin: 0px;
     font-family: sans-serif;
-}
-
-#hover-gallery-1 {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+}
+.container {
+    position: relative;
+    width: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    color: #111111;
+    padding: 35px;
 }
-h2 {
-    display: block;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+.container .card {
+    height: 220px;
+    max-width: 200px;
+    position: relative;
+    margin: 30px 10px;
+    padding: 20px 15px;
+    background: wheat;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 5px 202px black;
+    transition: 0.3s ease-in-out;
 }
-div {
-    display: block;
+.container .card:hover {
+    height: 420px;
 }
-hover-gallery-1 .card {
-    flex: 300px;
-    background-color: white;
-    border: 3px solid black;
-    margin: 24px;
-    padding: 24px;
-    border-radius: 12px;
+.containe .card .imgbox {
+    position: relative;
+    width: 260px;
+    height: 240px;
+    top: -60px;
+    left: 20px;
+}
+.container .card .imgbox img {
+    max-width: 170px;
+    max-height: 170px;
+    border-radius: 4px;
+    padding-left: 30px;
+}
+.container .card .content {
+    position: relative;
+    margin-top: -100px;
+    padding: 10px 15px;
     text-align: center;
-    transition: background-color 2s, box-shadow 2s, transform 2s;
+    color: #111;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+}
+.container .card:hover .content {
+    visibility: visible;
+    opacity: 1;
+    margin-top: -10px;
+    transition-delay: 0.3s;
 }
