--- a/css/home.css
+++ b/css/home.css
@@ -99,3 +99,16 @@ h3 {
     border: 5px solid transparent;
     color: #717568
 }
+
+/* media query */
+@media screen and (max-width: 768px) {
+    #main-components {
+        position: absolute;
+    }
+    #layout {
+        position: absolute;
+    }
+    #card-section {
+        position: absolute;
+    }
+}
