--- a/css/about.css
+++ b/css/about.css
@@ -82,3 +82,10 @@ ul {
 li {
     font-size: 15px;
 }
+
+@media only screen and (max-width: 480px) {
+    #main-components a {
+        display: flex;
+        flex-direction: column;
+    }
+}
