--- a/css/gallery.css
+++ b/css/gallery.css
@@ -64,3 +64,10 @@ p {
     padding: 3px;
     border-radius: 10px;
 }
+
+@media only screen and (max-width: 480px) {
+    #main-components a {
+        display: flex;
+        flex-direction: column;
+    }
+}
