--- a/css/home.css
+++ b/css/home.css
@@ -103,6 +103,6 @@ h3 {
 @media only screen and (max-width: 480px) {
     #main-components a {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
     }
 }
