--- a/css/gallery.css
+++ b/css/gallery.css
@@ -68,6 +68,6 @@ p {
 @media only screen and (max-width: 480px) {
     #main-components a {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
     }
 }
