--- a/exercises/grrm/css/style.css
+++ b/exercises/grrm/css/style.css
@@ -439,10 +439,34 @@ body {
     Media Queries Styling
 **************************************************************/
 /* TODO: Write your media queries here */
-@media only screen and (max-width: 1000px) and (min-width: 801px) {
 
+/* tablet breakpoint */
+@media only screen and (max-width: 1000px) and (min-width: 801px) {
+    #grid-layout {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas:
+            "header  header  header"
+            "navbar  navbar  navbar"
+            "banner  banner  banner"
+            "card-1  card-2  card-3"
+            "aside   blog    blog"
+            "footer  footer  footer"
+            ". bottom  bottom  bottom .";
+    }
+    #header h1 {
+        font-size: 36px;
+    }
+    #nav {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #nav a {
+        flex: 1;
+    }
 }
 
+/* mobile breakpoint */
 @media only screen and (max-width: 800px) {
-    
+
 }
