--- a/exercises/e-commerce-site/css/name.css
+++ b/exercises/e-commerce-site/css/name.css
@@ -43,7 +43,7 @@ body {
 /* hero */
 #hero {
     background-image: url(..//images/pic1.jpg);
-    height: 100vh;
+    height: 90vh;
     background-size: cover;
     background-position: center center;
     display: flex;
@@ -84,8 +84,9 @@ body {
     border: 5px solid transparent;
 }
 #on-sale-prod img:hover {
-    border: 5px solid #f8c7cc;
+    border: 5px solid transparent;
     border-radius: 10px;
+    box-shadow: 6px 6px 12px #0e0f19;
 }
 
 #feat-prod {
@@ -98,22 +99,24 @@ body {
     border: 5px solid transparent;
 }
 #feat-prod img:hover {
-    border: 5px solid #f8c7cc;
+    border: 5px solid transparent;
     border-radius: 10px;
+    box-shadow: 6px 6px 12px #0e0f19;
 }
 
-#creator-showcase {
+#pop-des {
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 1fr 1fr;
 }
-#creator-showcase img {
+#pop-des img {
     width: 100%;
     border: 5px solid transparent;
 }
-#creator-showcase img:hover {
-    border: 5px solid #f8c7cc;
+#pop-des img:hover {
+    border: 5px solid transparent;
     border-radius: 10px;
+    box-shadow: 6px 6px 12px #0e0f19;
 }
 
 
