--- a/exercises/e-commerce-site/css/name.css
+++ b/exercises/e-commerce-site/css/name.css
@@ -43,7 +43,7 @@ body {
 /* hero */
 #hero {
     background-image: url(..//images/pic1.jpg);
-    height: 90vh;
+    height: 100vh;
     background-size: cover;
     background-position: center center;
     display: flex;
@@ -119,14 +119,35 @@ body {
     box-shadow: 6px 6px 12px #0e0f19;
 }
 
+/* footer */
+#footer {
+    background-color: #f8c7cc;
+    color: #0e0f19;
+    padding: 12px;
+}
+#footer a {
+    text-decoration: none;
+    color: #0e0f19;
+}
+.foot-nav {
+    width: 800px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
 
 /* media queries */
 @media only screen and (max-width: 480) {
     #navbar {
         float: left;
+        padding: 5px
     }
     #logo {
-        font-size: 15px;
+        font-size: 10px;
+    }
+    #hero {
+        height: 50vh;
     }
     .hero-content {
         text-align: center;
