--- a/exercises/e-commerce-site/css/name.css
+++ b/exercises/e-commerce-site/css/name.css
@@ -143,7 +143,7 @@ body {
 /* media queries */
 @media only screen and (max-width: 480) {
     #header {
-    position: relative;
+    position: sticky;
     }
     #navbar {
     background-color: #57886C;
@@ -162,7 +162,6 @@ body {
     color: #0e0f19;
     text-decoration: none;
     padding: 5px;
-    float: left;
     }
     #navbar a:hover {
     color: #0e0f19;
