--- a/e-comm-web/css/name.css
+++ b/e-comm-web/css/name.css
@@ -11,7 +11,7 @@ body {
     background-color: #57886C;
     display: flex;
     align-items: center;
-    border: 2px solid red;
+    padding: 10px 24px;
 }
 
 #navbar a {
@@ -19,7 +19,6 @@ body {
     text-decoration: none;
     color: white;
     padding: 24px;
-    border: 2px dashed red;
 }
 
 #navbar a:hover {
@@ -38,9 +37,7 @@ body {
 
 
 .dropdown-container {
-    float: left;
-    margin: auto;
-    border: 3px solid blue;
+    position: relative;
 }
 .dropdown-menu {
     position: absolute;
@@ -50,8 +47,7 @@ body {
         opacity 0.25s,
         visibility 0.25s;
     z-index: 10;
-    margin: auto;
-    border: 3px dashed blue;
+    right: 0;
 }
 .dropdown-container:last-child .dropdown-menu {
     left: 10px;
@@ -69,4 +65,124 @@ body {
 }
 #navbar .dropdown-menu a:hover {
     background: #f8c7cc;
+}
+
+/* hero */
+#hero {
+    background-image: url(..//images/pic1.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hero-content {
+    text-align: center;
+    padding-top: 10vh;
+    padding-left: 450px;
+}
+.hero-content a {
+    background-color: #57886C;
+    border-radius: 20px;
+    padding: 10px;
+    text-decoration: none;
+    color: #f8c7cc;
+}
+.hero-content a:hover {
+    background-color: #f8c7cc;
+    color: #0e0f19;
+}
+
+
+/* sections */
+#sections {
+    max-width: 800px;
+    margin: 50px auto;
+    text-align: center;
+}
+#on-sale-prod {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+#on-sale-prod img {
+    width: 100%;
+    border: 5px solid transparent;
+}
+#on-sale-prod img:hover {
+    border: 5px solid transparent;
+    border-radius: 10px;
+    box-shadow: 6px 6px 12px #0e0f19;
+}
+
+#feat-prod {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+#feat-prod img {
+    width: 100%;
+    border: 5px solid transparent;
+}
+#feat-prod img:hover {
+    border: 5px solid transparent;
+    border-radius: 10px;
+    box-shadow: 6px 6px 12px #0e0f19;
+}
+
+#pop-des {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+#pop-des img {
+    width: 100%;
+    border: 5px solid transparent;
+}
+#pop-des img:hover {
+    border: 5px solid transparent;
+    border-radius: 10px;
+    box-shadow: 6px 6px 12px #0e0f19;
+}
+
+/* footer */
+#foot-layout {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    background-color: #466060;
+    padding: 15px;
+    margin: 0px;
+    text-align: center;
+}
+#footer h3 {
+    font-size: 25px;
+    color: white;
+}
+#footer a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding: 15px;
+    border: 2px solid transparent;
+}
+#footer a:hover {
+    color: white;
+    border: 2px solid transparent;
+    background-color: #57886C;
+    margin: 0px;
+}
+
+
+/* media queries */
+@media only screen and (min-width: 200px) {
+    #hero {
+        height: 50vh;
+    }
+    .hero-content {
+        text-align: center;
+        padding-top: 20vh;
+        padding-left: 300px;
+    }
 }
