--- a/e-comm-web/css/name.css
+++ b/e-comm-web/css/name.css
@@ -50,16 +50,16 @@ body {
     right: 0;
 }
 .dropdown-container:last-child .dropdown-menu {
-    left: 0;
+    right: 0;
 }
 .dropdown-container:hover .dropdown-menu {
     opacity: 1;
     visibility: visible;
-    left: 0;
+
 }
 .dropdown-menu a {
     background-color: #466060;
-    width: 100%;
+    width: 75%;
     min-width: 200px;
 }
 #navbar .dropdown-menu a:hover {
@@ -80,8 +80,8 @@ body {
     text-align: center;
     background-color: #466060;
     color: white;
-    padding: 10px;
-    border-radius: 30px;
+    padding: 30px;
+    border-radius: 50%;
 }
 .hero-content a {
     background-color: #57886C;
