--- a/e-comm-web/css/name.css
+++ b/e-comm-web/css/name.css
@@ -179,6 +179,6 @@ body {
 /* media queries */
 @media only screen and (min-width: 200px) and (max-width: 480px) {
     #hero {
-        height: 50vh;
+        height: 50%;
     }
 }
